@@ -33,6 +33,7 @@ BUG FIXES:
 +Fix bug in restoring bookmarks after a file reload.
 +Fix some visibility issues with the tab controls with dark themes on gtk.
 +Fix Unicode handling issue in OutputBuffer.
++Fix window activation issue after canceling directory search job.
 
 #-----------------------------------------------------------------------------#
 
